--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/montserrat": "^0.2.3",
     "@expo/vector-icons": "^14.0.4",
     "@react-navigation/bottom-tabs": "^7.1.3",
     "@react-navigation/native": "^7.0.13",
     "@react-navigation/stack": "^7.0.18",
     "expo": "~52.0.11",
-    "expo-font": "^13.0.1",
+    "expo-font": "~13.0.1",
     "expo-status-bar": "~2.0.0",
     "install": "^0.13.0",
     "npx": "^10.2.2",
