--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo-google-fonts/montserrat": "^0.2.3",
     "@expo/vector-icons": "^14.0.4",
     "@react-navigation/bottom-tabs": "^7.1.3",
+    "@react-navigation/drawer": "^7.0.18",
     "@react-navigation/native": "^7.0.13",
     "@react-navigation/stack": "^7.0.18",
     "expo": "~52.0.11",
