--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@expo-google-fonts/montserrat": "^0.2.3",
     "@expo/vector-icons": "^14.0.4",
+    "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-navigation/bottom-tabs": "^7.1.3",
     "@react-navigation/drawer": "^7.0.18",
     "@react-navigation/native": "^7.0.13",
     "@react-navigation/stack": "^7.0.18",
+    "axios": "^1.7.9",
     "expo": "~52.0.11",
     "expo-font": "~13.0.1",
     "expo-status-bar": "~2.0.0",
