--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "npx": "^10.2.2",
     "react": "18.3.1",
     "react-native": "0.76.3",
-    "react-native-gesture-handler": "^2.21.2"
+    "react-native-gesture-handler": "^2.21.2",
+    "react-native-image-picker": "^7.2.3",
+    "react-native-toast-message": "^2.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
